<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ActivityAfegirPrestec"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtvw_titol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prestec_titol"
        />

    <TextView
        android:id="@+id/txtvw_moros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prestec_moros"
        />

    <Spinner
        android:id="@+id/spnnr_moros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/txtvw_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prestec_item"
        />

    <Spinner
        android:id="@+id/spnnr_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_prestec_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>

        <Button
            android:id="@+id/btn_prestec_acceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceptar"/>

        </LinearLayout>


</LinearLayout>